--- a/part7/Bloglist/bloglist-frontend/package.json
+++ b/part7/Bloglist/bloglist-frontend/package.json
@@ -7,6 +7,7 @@
         "axios": "^0.26.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.6.0",
         "react-dom": "^18.0.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.4.3",
