--- a/part13/package.json
+++ b/part13/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.11.0",
     "sequelize": "^6.31.1"
   }
