--- a/part13/package.json
+++ b/part13/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "sequelize": "^6.31.1"
   }
