--- a/part13/package.json
+++ b/part13/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "migration:down": "node utils/rollback.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "umzug": "^3.2.1"
   }
 }
